# rl_race

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: race.launch.py
scripts/: maping.py  teleop_twist.py  visualize_odometry.py
urdf/: F1race.urdf
worlds/: F1_10.stl  SHANGHAI_TRACK.dae  empty.sdf
